feat(deployment): Configure dynamic deployment URLs
Update docusaurus.config.ts to consume  and  from .
This refactors the deployment configuration to be dynamic, allowing for
flexible deployment targets.

Replaced the generic  script in  with
 for GitHub Pages and  for custom domains.
These scripts explicitly set the  and  environment
variables, making it possible to switch deployment targets without
modifying the Docusaurus configuration file itself.

This change ensures that future domain changes or new deployment targets
only require updates to  scripts, improving maintainability.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
+    "deploy:gh": "URL='https://Cyfamod-Technologies.github.io' BASE_URL='/school-docs/' GIT_USER=CynthiaWahome docusaurus deploy",
+    "deploy:domain": "URL='https://bmp.com.ng' BASE_URL='/docs/' GIT_USER=CynthiaWahome docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
